# LivingNarrativeEngine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
docs/: beta-quality-gate-rubric.md  cost-tracking.md  intervention.md  plugin-sdk.md  project_plan.md  random-engine.md  real-llm-benchmark.md  release-checklist.md  rights-and-security.md  session-autonomy.md  spec-foundation.md  state-model.md  ux-acceptance-checklist.md
docs/adr/: 0001-retire-openspec-adopt-issue-adr.md  0002-llm-narrator-fallback.md  0003-narrator-writes-scene-summary.md  0004-explicit-plugin-allowlist-trust-boundary.md  0005-v1-release-contract.md  0006-plugin-provider-stability-tiers.md  0007-web-ui-security-floor.md  0008-project-transaction-recovery.md  0009-v1-architecture-debt-scope.md  0010-quality-gate-narrative-slo.md  0011-release-engineering-baseline.md  0012-mit-license.md  0013-authored-action-outcomes.md
docs/evaluations/: 2026-07-06-replay-20turn-eval.md  2026-07-14-20260714-issue085-gpt56-luna-low-v2-benchmark.md  2026-07-14-20260714-issue085-gpt56-luna-low-v2-human-rubric.md  (+5 more)
openspec/: config.yaml
tests/: conftest.py  test_chance.py  test_cli.py  test_dice.py  test_docker_quickstart.py  test_ids.py  test_init.py  test_loader.py  test_models.py  test_random_engine.py  test_random_reproducibility.py  test_reroll_override.py  test_roll_log.py  test_state_model.py  test_state_transaction.py  test_tables.py  test_validation.py
(+417 files in other folders)
