[project]
name = "living-narrative"
version = "0.1.0"
description = "Living Narrative Engine — state-first, LLM-driven interactive narrative runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
living-narrative = "living_narrative.cli:app"
living-narrative-state-schemas = "living_narrative.state.schema_export:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/living_narrative"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
